        \code{substring} has also been sped up for long strings.
  \item Relational operators are now faster, and may sometimes be done in 
        helper threads (though currently without pipelining of data).
        Computations such as \code{sum(vec>0)} are now done with a
        merged procedure that avoids creating \code{vec>0} as an intermediate
        value.
  \item Creation of matrices with \code{matrix} is now faster.
  \item Creation of arrays with \code{array} is now usually done with
        a faster internal routine, mimicking (with improvements) changes
        in R-2.15.2 and later R Core versions.
  \item The \code{which.min}, and \code{which.max} functions have been
        sped up, especially for logical and integer arguments (partially
        using code from R-3.2.3, with improvements).
  \item The \code{rep} function is now often faster for string vectors,
        and for vectors of any type that have names.
  \item Improved methods for symbol lookup are now used, which increase
        speed in many contexts, and especially in functions that are
        defined in packages (rather than in the global workspace).
  \item The speed of \code{which} has been improved.
  \item The speed of the logical operators (\code{!}, \code{&}, and \code{|})
        has been improved for long vectors.
  \item The speed of \code{.Call} has been improved.
  \item New versions of the C matrix multiply functions are now used,
        which may be faster due to use of the C "restrict" keyword to
        allow better optimization.
  \item The \code{\%\%} and \code{\%/\%} operators are now faster when 
        their operands are real vectors that contain integer values.
  \item Subscripting with a logical vector is now faster for long vectors.
  \item General interpretive overhead has been reduced in some contexts,
        particularly when extracting or replacing subsets with 
        \code{[.]} or \code{[[.]]}.
  }}

  \subsection{FEATURE CHANGES}{
  \itemize{