@@ -1,0 +1,1 @@
+Do more in helper threads - &, |, !.  Plus some cleanup.
